--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
-spring.application.name=CustomerRelationshipManagement
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crm
+spring.datasource.username=root
+spring.datasource.password=a12s34d5
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate settings (no need to explicitly define the dialect anymore)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Disable open-in-view (recommended for production)
+spring.jpa.open-in-view=false
+
